beldex_libwallet2_api_c/src/main/cpp/wallet2_api_c.h

//     virtual std::vector<uint64_t>  fee() const = 0;
extern ADDAPI const char* BELDEX_UnsignedTransaction_fee(void* unsignedTx_ptr, const char* separator);
//     virtual std::vector<uint64_t> mixin() const = 0;
extern ADDAPI const char* BELDEX_UnsignedTransaction_mixin(void* unsignedTx_ptr, const char* separator);
//     virtual std::string confirmationMessage() const = 0;
extern ADDAPI const char* BELDEX_UnsignedTransaction_confirmationMessage(void* unsignedTx_ptr);
//     virtual std::vector<std::string> paymentId() const = 0;
extern ADDAPI const char* BELDEX_UnsignedTransaction_paymentId(void* unsignedTx_ptr, const char* separator);
//     virtual std::vector<std::string> recipientAddress() const = 0;
extern ADDAPI const char* BELDEX_UnsignedTransaction_recipientAddress(void* unsignedTx_ptr, const char* separator);
//     virtual uint64_t minMixinCount() const = 0;
extern ADDAPI uint64_t BELDEX_UnsignedTransaction_minMixinCount(void* unsignedTx_ptr);
//     virtual uint64_t txCount() const = 0;
extern ADDAPI uint64_t BELDEX_UnsignedTransaction_txCount(void* unsignedTx_ptr);
//     virtual bool sign(const std::string &signedFileName) = 0;
extern ADDAPI bool BELDEX_UnsignedTransaction_sign(void* unsignedTx_ptr, const char* signedFileName);
extern ADDAPI const char* BELDEX_UnsignedTransaction_signUR(void* unsignedTx_ptr, int max_fragment_length);
//     };
//     struct Transfer {
//         Transfer(uint64_t _amount, const std::string &address);
//         const uint64_t amount;
//         const std::string address;
//     };
//     virtual ~TransactionInfo() = 0;
//     virtual int  direction() const = 0;
extern ADDAPI int BELDEX_TransactionInfo_direction(void* txInfo_ptr);
//     virtual bool isPending() const = 0;
extern ADDAPI bool BELDEX_TransactionInfo_isPending(void* txInfo_ptr);
//     virtual bool isFailed() const = 0;
extern ADDAPI bool BELDEX_TransactionInfo_isFailed(void* txInfo_ptr);
//     virtual bool isCoinbase() const = 0;
extern ADDAPI bool BELDEX_TransactionInfo_isCoinbase(void* txInfo_ptr);
//     virtual uint64_t amount() const = 0;
extern ADDAPI uint64_t BELDEX_TransactionInfo_amount(void* txInfo_ptr);
//     virtual uint64_t fee() const = 0;
extern ADDAPI uint64_t BELDEX_TransactionInfo_fee(void* txInfo_ptr);
//     virtual uint64_t blockHeight() const = 0;
extern ADDAPI uint64_t BELDEX_TransactionInfo_blockHeight(void* txInfo_ptr);
//     virtual std::string description() const = 0;
extern ADDAPI const char* BELDEX_TransactionInfo_description(void* txInfo_ptr);
//     virtual std::set<uint32_t> subaddrIndex() const = 0;
extern ADDAPI const char* BELDEX_TransactionInfo_subaddrIndex(void* txInfo_ptr, const char* separator);
//     virtual uint32_t subaddrAccount() const = 0;
extern ADDAPI uint32_t BELDEX_TransactionInfo_subaddrAccount(void* txInfo_ptr);
//     virtual std::string label() const = 0;
extern ADDAPI const char* BELDEX_TransactionInfo_label(void* txInfo_ptr);
//     virtual uint64_t confirmations() const = 0;
extern ADDAPI uint64_t BELDEX_TransactionInfo_confirmations(void* txInfo_ptr);
//     virtual uint64_t unlockTime() const = 0;
extern ADDAPI uint64_t BELDEX_TransactionInfo_unlockTime(void* txInfo_ptr);