impls/monero.dart/lib/src/generated_bindings_beldex.g.dart


  late final _BELDEX_UnsignedTransaction_feePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_UnsignedTransaction_fee');
  late final _BELDEX_UnsignedTransaction_fee =
      _BELDEX_UnsignedTransaction_feePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> BELDEX_UnsignedTransaction_mixin(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _BELDEX_UnsignedTransaction_mixin(
      unsignedTx_ptr,
      separator,
    );
  }

  late final _BELDEX_UnsignedTransaction_mixinPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_UnsignedTransaction_mixin');
  late final _BELDEX_UnsignedTransaction_mixin =
      _BELDEX_UnsignedTransaction_mixinPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> BELDEX_UnsignedTransaction_confirmationMessage(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
  ) {
    return _BELDEX_UnsignedTransaction_confirmationMessage(
      unsignedTx_ptr,
    );
  }

  late final _BELDEX_UnsignedTransaction_confirmationMessagePtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>>(
      'BELDEX_UnsignedTransaction_confirmationMessage');
  late final _BELDEX_UnsignedTransaction_confirmationMessage =
      _BELDEX_UnsignedTransaction_confirmationMessagePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_UnsignedTransaction_paymentId(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _BELDEX_UnsignedTransaction_paymentId(
      unsignedTx_ptr,
      separator,
    );
  }

  late final _BELDEX_UnsignedTransaction_paymentIdPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_UnsignedTransaction_paymentId');
  late final _BELDEX_UnsignedTransaction_paymentId =
      _BELDEX_UnsignedTransaction_paymentIdPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> BELDEX_UnsignedTransaction_recipientAddress(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _BELDEX_UnsignedTransaction_recipientAddress(
      unsignedTx_ptr,
      separator,
    );
  }

  late final _BELDEX_UnsignedTransaction_recipientAddressPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>>(
      'BELDEX_UnsignedTransaction_recipientAddress');
  late final _BELDEX_UnsignedTransaction_recipientAddress =
      _BELDEX_UnsignedTransaction_recipientAddressPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int BELDEX_UnsignedTransaction_minMixinCount(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
  ) {
    return _BELDEX_UnsignedTransaction_minMixinCount(
      unsignedTx_ptr,
    );
  }

  late final _BELDEX_UnsignedTransaction_minMixinCountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_UnsignedTransaction_minMixinCount');
  late final _BELDEX_UnsignedTransaction_minMixinCount =
      _BELDEX_UnsignedTransaction_minMixinCountPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_UnsignedTransaction_txCount(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
  ) {
    return _BELDEX_UnsignedTransaction_txCount(
      unsignedTx_ptr,
    );
  }

  late final _BELDEX_UnsignedTransaction_txCountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_UnsignedTransaction_txCount');
  late final _BELDEX_UnsignedTransaction_txCount =
      _BELDEX_UnsignedTransaction_txCountPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_UnsignedTransaction_sign(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
    ffi.Pointer<ffi.Char> signedFileName,
  ) {
    return _BELDEX_UnsignedTransaction_sign(
      unsignedTx_ptr,
      signedFileName,
    );
  }

  late final _BELDEX_UnsignedTransaction_signPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_UnsignedTransaction_sign');
  late final _BELDEX_UnsignedTransaction_sign =
      _BELDEX_UnsignedTransaction_signPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> BELDEX_UnsignedTransaction_signUR(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
    int max_fragment_length,
  ) {
    return _BELDEX_UnsignedTransaction_signUR(
      unsignedTx_ptr,
      max_fragment_length,
    );
  }

  late final _BELDEX_UnsignedTransaction_signURPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Int)>>('BELDEX_UnsignedTransaction_signUR');
  late final _BELDEX_UnsignedTransaction_signUR =
      _BELDEX_UnsignedTransaction_signURPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, int)>();

  int BELDEX_TransactionInfo_direction(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_direction(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_directionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_TransactionInfo_direction');
  late final _BELDEX_TransactionInfo_direction =
      _BELDEX_TransactionInfo_directionPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_TransactionInfo_isPending(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_isPending(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_isPendingPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_TransactionInfo_isPending');
  late final _BELDEX_TransactionInfo_isPending =
      _BELDEX_TransactionInfo_isPendingPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_TransactionInfo_isFailed(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_isFailed(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_isFailedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_TransactionInfo_isFailed');
  late final _BELDEX_TransactionInfo_isFailed =
      _BELDEX_TransactionInfo_isFailedPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_TransactionInfo_isCoinbase(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_isCoinbase(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_isCoinbasePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_TransactionInfo_isCoinbase');
  late final _BELDEX_TransactionInfo_isCoinbase =
      _BELDEX_TransactionInfo_isCoinbasePtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_TransactionInfo_amount(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_amount(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_amountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_TransactionInfo_amount');
  late final _BELDEX_TransactionInfo_amount = _BELDEX_TransactionInfo_amountPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_TransactionInfo_fee(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_fee(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_feePtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_TransactionInfo_fee');
  late final _BELDEX_TransactionInfo_fee = _BELDEX_TransactionInfo_feePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_TransactionInfo_blockHeight(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_blockHeight(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_blockHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_TransactionInfo_blockHeight');
  late final _BELDEX_TransactionInfo_blockHeight =
      _BELDEX_TransactionInfo_blockHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_TransactionInfo_description(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_description(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_descriptionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_TransactionInfo_description');
  late final _BELDEX_TransactionInfo_description =
      _BELDEX_TransactionInfo_descriptionPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_TransactionInfo_subaddrIndex(
    ffi.Pointer<ffi.Void> txInfo_ptr,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _BELDEX_TransactionInfo_subaddrIndex(
      txInfo_ptr,
      separator,
    );
  }

  late final _BELDEX_TransactionInfo_subaddrIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_TransactionInfo_subaddrIndex');
  late final _BELDEX_TransactionInfo_subaddrIndex =
      _BELDEX_TransactionInfo_subaddrIndexPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int BELDEX_TransactionInfo_subaddrAccount(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_subaddrAccount(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_subaddrAccountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_TransactionInfo_subaddrAccount');
  late final _BELDEX_TransactionInfo_subaddrAccount =
      _BELDEX_TransactionInfo_subaddrAccountPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_TransactionInfo_label(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_label(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_labelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_TransactionInfo_label');
  late final _BELDEX_TransactionInfo_label = _BELDEX_TransactionInfo_labelPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_TransactionInfo_confirmations(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_confirmations(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_confirmationsPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_TransactionInfo_confirmations');
  late final _BELDEX_TransactionInfo_confirmations =
      _BELDEX_TransactionInfo_confirmationsPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_TransactionInfo_unlockTime(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_unlockTime(
      txInfo_ptr,
    );
  }
